[package]
name = "resusage_poller"
version = "0.1.3"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
failure = "=0.1.1"
fruently = "=0.9.1"
serde = "=1.0.23"
serde_derive = "=1.0.23"
serde_json = "=1.0.7"
structopt = "=0.1.6"
structopt-derive = "=0.1.6"
systemstat = { git = "https://github.com/myfreeweb/systemstat.git", rev = "721338a" }

[features]
default = []

[[bin]]
name = "resup"
path = "src/main.rs"