[package]
name = "resusage_poller"
version = "0.1.4"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
failure = "=0.1.1"
fruently = { git = "https://github.com/guangie88/fruently.git", rev = "4db5ece" }
humantime = "=1.0.0"
serde = "=1.0.23"
serde_derive = "=1.0.23"
serde_json = "=1.0.7"
structopt = "=0.1.6"
structopt-derive = "=0.1.6"
systemstat = { git = "https://github.com/myfreeweb/systemstat.git", rev = "721338a" }

[features]
default = []

[[bin]]
name = "resup"
path = "src/main.rs"
